# realworld-rust

./: .env.example  Cargo.toml  README.md  compose.yaml  rest-client.http
.devcontainer/: Dockerfile  devcontainer.json
migrations/: 20240624053217_table.down.sql  20240624053217_table.up.sql
src/: main.rs
src/models/: article.rs  user.rs
src/routes/: article.rs  healthcheck.rs  home.rs  mod.rs
src/schemas/: article.rs
