[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "std", "env-filter" ] }
